name:           snaplet-groundhog
version:        1.0.0.0
synopsis:       postgresql-groundhog snaplet for the Snap Framework
author:         Jason Reule
maintainer:     rulejay@gmail.com
build-type:     Simple
cabal-version:  >= 1.10
homepage:       https://github.com/heyj-ca/snaplet-groundhog
category:       Web, Snap

data-files:
  resources/db/devel.cfg
  resources/auth/devel.cfg

Library
  hs-source-dirs: src

  exposed-modules:
    Snap.Snaplet.Groundhog.Postgresql

  build-depends:
    base                       >= 4       && < 4.12,
    bytestring                 >= 0.9.1   && < 0.11,
    clientsession              >= 0.7.2   && < 0.10,
    configurator               >= 0.2     && < 0.4,
    lens                       >= 3.7.6   && < 4.17,
    lifted-base                >= 0.2     && < 0.3,
    groundhog,
    groundhog-postgresql,
    monad-control              >= 1.0     && < 1.1,
    monad-logger,
    mtl                        >= 2       && < 2.3,
    postgresql-simple          >= 0.3     && < 0.6,
    resource-pool              >= 0.2     && < 0.3,
    snap                       >= 1.0     && < 1.2,
    text                       >= 0.11    && < 1.3,
    transformers               >= 0.2     && < 0.6,
    transformers-base          >= 0.4     && < 0.5,
    unordered-containers       >= 0.2     && < 0.3


  ghc-options: -Wall -fwarn-tabs -funbox-strict-fields
               -fno-warn-orphans -fno-warn-unused-do-bind

  default-language: Haskell2010


